<resources>
    <string name="app_name">KITNA PYARA</string>
    <string name="credits">CREDITS</string>
    <string name="p">%</string>
    <string name="mubarak_ho">Mubarak ho</string>
    <string name="chetan_patil">CHETAN PATIL</string>
    <string name="_50_compert_zone_pg_1st_block_rajaji_nagara_bengaluru">#50,Compert zone PG 1st Block Rajaji Nagara ,Bengaluru</string>
    <string name="find_me_on">Find me on :</string>
    <string name="_91_9742179809">+91-9742179809</string>
    <string name="chetu_is_gmail_com">chetu.is@gmail.com</string>
    <string name="back">BACK</string>
    <string name="designed_amp_developed_by"><![CDATA[Designed & Developed By :]]></string>
    <string name="submit_details">SUBMIT DETAILS</string>
    <string name="enter_boy_apos_s_name">ENTER BOY \'S NAME</string>
    <string name="enter_girl_apos_s_name">ENTER GIRL \'S NAME</string>
    <string name="_1_bwg">1 . BWG</string>
    <string name="_2_gwb">2 .GWB</string>
    <string name="submit_choice">SUBMIT CHOICE</string>
    <string name="enter_1_or_2">ENTER 1 OR 2</string>
    <string name="which_one_you_want_to_know">Which one you want to know ?</string>
    <string name="chetan">CHETAN</string>
</resources>
