<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chetan.Receive">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/which_one_you_want_to_know"
        android:id="@+id/tvWhich"
        android:textStyle="bold"
        android:editable="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/_1_bwg"
        android:id="@+id/tvBoyWedsGirl"
        android:layout_below="@+id/tvWhich"
        android:layout_alignLeft="@+id/tvWhich"
        android:layout_alignStart="@+id/tvWhich"
        android:layout_marginTop="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/_2_gwb"
        android:id="@+id/tvGirlWedsBoy"
        android:layout_below="@+id/tvBoyWedsGirl"
        android:layout_alignLeft="@+id/tvBoyWedsGirl"
        android:layout_alignStart="@+id/tvBoyWedsGirl"
        android:layout_marginTop="52dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etEnterOneRTwo"
        android:layout_below="@+id/tvGirlWedsBoy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:hint="@string/enter_1_or_2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_choice"
        android:id="@+id/btnSubmitChoice"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/etEnterOneRTwo"
        android:layout_centerHorizontal="true"
        android:onClick="submitChoice" />
</RelativeLayout>
